Bug Fixed for svg overflow

--- a/src/components/feed/FeedTree/FeedTree.scss
+++ b/src/components/feed/FeedTree/FeedTree.scss
@@ -19,19 +19,20 @@
   position:relative;
 
   .pf-c-switch {
-  
     display:flex;
     row-gap: 0.30rem;
     flex-direction: column;
 
     &__label {
       color:white !important;
+      font-size: 0.85rem;
       padding-left:0;
       margin-left:-0.25em;
       padding-top:0.25rem;
     }
   }
 
+ 
   &__orientation {
     padding-left: 1rem;
     padding-top:0.5rem;
@@ -76,7 +77,7 @@
 
   &__title {
   fill: $tree-node-backgound;
-  font-size: 0.95rem;
+  font-size: 0.75rem;
   font-weight: 900;
   font-family: sans-serif;
   }
